--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,27 +11,27 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
-  firebase_core: ^3.1.0
-  firebase_auth: ^5.1.0
-  cloud_firestore: ^5.1.0
-  firebase_storage: ^12.1.0
-  firebase_messaging: ^15.0.1
-  firebase_core_web: ^2.17.0
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.1
+  cloud_firestore: ^6.0.0
+  firebase_storage: ^13.0.0
+  firebase_messaging: ^16.0.0
+  firebase_core_web: ^3.0.0
   js: ^0.6.7
   uuid: ^4.0.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   shared_preferences: ^2.2.2
-  file_picker: ^8.0.0+1
+  file_picker: ^10.3.2
   image_picker: ^1.0.5
   cached_network_image: ^3.3.1
-  flutter_local_notifications: ^19.4.0
+  flutter_local_notifications: ^19.4.1
   flutter_typeahead: ^5.0.1
-  flutter_slidable: ^3.0.1
+  flutter_slidable: ^4.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
