--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "wewire",
   "version": "1.0.0",
   "description": "A Windows desktop application for maintenance issue communication between operators, quality agents, and maintenance service personnel.",
-  "main": "sendNotification.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
+  "main": "notificationServer.js",
   "scripts": {
+    "start": "node notificationServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +21,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "firebase-admin": "^13.4.0"
+    "firebase-admin": "^13.4.0",
+    "body-parser": "^1.20.2"
   }
 }
