--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "url": "https://github.com/Rayenelhafsi/Wewire/issues"
   },
   "homepage": "https://github.com/Rayenelhafsi/Wewire#readme",
+  "engines": {
+    "node": "22.x"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
