--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_typeahead: ^5.0.1
   flutter_slidable: ^4.0.1
   googleapis_auth: ^1.5.0
+  syncfusion_flutter_charts: ^30.2.7
 
 dev_dependencies:
   flutter_test:
