--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_slidable: ^4.0.1
   googleapis_auth: ^1.5.0
   syncfusion_flutter_charts: ^30.2.7
+  firebase_database: ^12.0.0
 
 dev_dependencies:
   flutter_test:
