--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   googleapis_auth: ^1.5.0
   syncfusion_flutter_charts: ^30.2.7
   firebase_database: ^12.0.0
+  logging: ^1.2.0
 
 dev_dependencies:
   flutter_test:
