--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,3 +42,18 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/logo.png
+  fonts:
+    - family: TitilliumWeb
+      fonts:
+        - asset: assets/fonts/TitilliumWeb-Regular.ttf
+        - asset: assets/fonts/TitilliumWeb-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/TitilliumWeb-Light.ttf
+          weight: 300
+        - asset: assets/fonts/TitilliumWeb-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/TitilliumWeb-Italic.ttf
+          style: italic
+        - asset: assets/fonts/TitilliumWeb-BoldItalic.ttf
+          weight: 700
+          style: italic
